--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="./brain.js"></script>
 
     <link rel="stylesheet" href="./style.css">
+    <script src="./dataset.js"></script>
     <script src="./index.js"></script>
     
     <title>Document</title>
